Added option to disable ssl verification for languagetool
This will allow to use self-signed certificates with local run
languagetool APIs

Signed-off-by: Mert Tumer <mert.tumer@collabora.com>
Change-Id: I2bda575fa6174dfc0f6c24da45267ee732643db6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136811
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145594
Tested-by: Jenkins
Reviewed-by: Henry Castro <hcastro@collabora.com>

--- a/include/sal/log-areas.dox
+++ b/include/sal/log-areas.dox
@@ -315,6 +315,10 @@ certain functionality.
 @li @c jfw.level1
 @li @c jfw.level2
 
+@section LanguageTool
+
+@li @c languagetool
+
 @section LibreOfficeKit
 
 @li @c lok
