--- a/wizards/source/resources/resources_en_US.properties
+++ b/wizards/source/resources/resources_en_US.properties
@@ -23,11 +23,11 @@
 #  resources for com.sun.star.wizards
 #
 RID_COMMON_0=The directory '%1' could not be created.<BR>There may not be enough space left on your hard disk.
-RID_COMMON_1=The text document could not be created.<BR>Please check if the module 'PRODUCTNAME Writer' is installed.
-RID_COMMON_2=The spreadsheet could not be created.<BR>Please check if the module 'PRODUCTNAME Calc' is installed.
-RID_COMMON_3=The presentation could not be created.<BR>Please check if the module 'PRODUCTNAME Impress' is installed.
-RID_COMMON_4=The drawing could not be created.<BR>Please check if the module 'PRODUCTNAME Draw' is installed.
-RID_COMMON_5=The formula could not be created.<BR>Please check if the module 'PRODUCTNAME Math' is installed.
+RID_COMMON_1=The text document could not be created.<BR>Please check if the module '%PRODUCTNAME Writer' is installed.
+RID_COMMON_2=The spreadsheet could not be created.<BR>Please check if the module '%PRODUCTNAME Calc' is installed.
+RID_COMMON_3=The presentation could not be created.<BR>Please check if the module '%PRODUCTNAME Impress' is installed.
+RID_COMMON_4=The drawing could not be created.<BR>Please check if the module '%PRODUCTNAME Draw' is installed.
+RID_COMMON_5=The formula could not be created.<BR>Please check if the module '%PRODUCTNAME Math' is installed.
 RID_COMMON_6=The files required could not be found.<BR>Please start the %PRODUCTNAME Setup and choose 'Repair'.
 RID_COMMON_7=The file '<PATH>' already exists.<BR><BR>Would you like to overwrite the existing file?
 RID_COMMON_8=Yes
