Remove "tr" autocorr entries that correct to itself
Change-Id: I969026e5847852a59e429ce5b0bbf491452302c3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144921
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Muhammet Kara <kara@libreoffice.org>
Tested-by: Julien Nabet <serval2412@yahoo.fr>

--- a/extras/source/autocorr/lang/tr/DocumentList.xml
+++ b/extras/source/autocorr/lang/tr/DocumentList.xml
@@ -567,7 +567,7 @@
   <block-list:block block-list:abbreviated-name="Parlementer" block-list:name="Parlamenter"/>
   <block-list:block block-list:abbreviated-name="parlementer" block-list:name="parlamenter"/>
   <block-list:block block-list:abbreviated-name="Parlemento" block-list:name="Parlamento"/>
-  <block-list:block block-list:abbreviated-name="parlemento" block-list:name="parlemento"/>
+  <block-list:block block-list:abbreviated-name="parlemento" block-list:name="parlamento"/>
   <block-list:block block-list:abbreviated-name="Payton" block-list:name="Fayton"/>
   <block-list:block block-list:abbreviated-name="payton" block-list:name="fayton"/>
   <block-list:block block-list:abbreviated-name="Penbe" block-list:name="Pembe"/>
