--- a/external/fontconfig/README
+++ b/external/fontconfig/README
@@ -1,6 +1,6 @@
-This "bundled" fontconfig is built only in an Android build
+This "bundled" fontconfig is usually built only in an Android build or a fuzzing build
 
 Fontconfig is a font configuration and customization library. It is designed to locate fonts
 within the system and select them according to requirements specified by applications. 
 
-From [ http://packages.debian.org/squeeze/fontconfig ]
+From [ https://www.freedesktop.org/wiki/Software/fontconfig/ ]
