--- a/external/liborcus/liborcus-no-benchmark.patch.1
+++ b/external/liborcus/liborcus-no-benchmark.patch.1
@@ -8,11 +8,11 @@ skip the doc_example subdirectory too.
 
 --- liborcus/Makefile.in
 +++ liborcus/Makefile.in
-@@ -408,7 +408,7 @@
- top_build_prefix = @top_build_prefix@
- top_builddir = @top_builddir@
+@@ -423,7 +423,7 @@
  top_srcdir = @top_srcdir@
--SUBDIRS = src include benchmark	doc_example
+ valgrind_enabled_tools = @valgrind_enabled_tools@
+ valgrind_tools = @valgrind_tools@
+-SUBDIRS = src include benchmark doc_example
 +SUBDIRS = src include
  ACLOCAL_AMFLAGS = -I m4
  pcfiles = liborcus-@ORCUS_API_VERSION@.pc $(am__append_1)
