--- a/external/liborcus/std-get-busted.patch.1
+++ b/external/liborcus/std-get-busted.patch.1
@@ -30,20 +30,20 @@ index 17743e6a..fe9a7d81 100644
 +++ b/include/orcus/config.hpp
 @@ -12,7 +12,7 @@
  #include "orcus/types.hpp"
- 
+
  #include <string>
 -#include <variant>
 +#include <boost/variant.hpp>
- 
+
  namespace orcus {
- 
+
 @@ -37,7 +37,7 @@ struct ORCUS_DLLPUBLIC config
      };
- 
+
      // TODO: add config for other formats as needed.
 -    using data_type = std::variant<csv_config>;
 +    using data_type = boost::variant<csv_config>;
- 
+
      /**
       * Enable or disable runtime debug output to stdout or stderr.
 diff --git a/include/orcus/css_selector.hpp b/include/orcus/css_selector.hpp
@@ -52,17 +52,17 @@ index 1e41d544..dafeddf5 100644
 +++ b/include/orcus/css_selector.hpp
 @@ -12,11 +12,12 @@
  #include "css_types.hpp"
- 
+
  #include <ostream>
 -#include <variant>
  #include <vector>
  #include <unordered_set>
  #include <unordered_map>
- 
+
 +#include <boost/variant.hpp>
 +
  namespace orcus {
- 
+
  struct ORCUS_DLLPUBLIC css_simple_selector_t
 @@ -73,7 +74,7 @@ struct ORCUS_DLLPUBLIC css_selector_t
   */
@@ -70,7 +70,7 @@ index 1e41d544..dafeddf5 100644
  {
 -    using value_type = std::variant<std::string_view, css::rgba_color_t, css::hsla_color_t>;
 +    using value_type = boost::variant<std::string_view, css::rgba_color_t, css::hsla_color_t>;
- 
+
      css::property_value_t type;
      value_type value;
 diff --git a/include/orcus/json_parser_thread.hpp b/include/orcus/json_parser_thread.hpp
@@ -83,16 +83,16 @@ index 8328ef11..565008da 100644
  #include <ostream>
 -#include <variant>
 +#include <boost/variant.hpp>
- 
+
  namespace orcus {
- 
+
 @@ -47,7 +47,7 @@ enum class parse_token_t
- 
+
  struct ORCUS_PSR_DLLPUBLIC parse_token
  {
 -    using value_type = std::variant<std::string_view, parse_error_value_t, double>;
 +    using value_type = boost::variant<std::string_view, parse_error_value_t, double>;
- 
+
      parse_token_t type;
      value_type value;
 diff --git a/include/orcus/sax_token_parser_thread.hpp b/include/orcus/sax_token_parser_thread.hpp
@@ -101,24 +101,24 @@ index b3645735..e0842013 100644
 +++ b/include/orcus/sax_token_parser_thread.hpp
 @@ -12,10 +12,11 @@
  #include "types.hpp"
- 
+
  #include <memory>
 -#include <variant>
  #include <vector>
  #include <ostream>
- 
+
 +#include <boost/variant.hpp>
 +
  namespace orcus {
- 
+
  class tokens;
 @@ -36,7 +37,7 @@ enum class parse_token_t
- 
+
  struct ORCUS_PSR_DLLPUBLIC parse_token
  {
 -    using value_type = std::variant<std::string_view, parse_error_value_t, const xml_token_element_t*>;
 +    using value_type = boost::variant<std::string_view, parse_error_value_t, const xml_token_element_t*>;
- 
+
      parse_token_t type;
      value_type value;
 diff --git a/include/orcus/spreadsheet/pivot.hpp b/include/orcus/spreadsheet/pivot.hpp
@@ -131,28 +131,28 @@ index dee25596..fa091160 100644
  #include <limits>
 -#include <variant>
  #include <optional>
- 
+
 +#include <boost/variant.hpp>
 +
  namespace ixion {
- 
+
  struct abs_range_t;
 @@ -36,7 +37,7 @@ using pivot_cache_indices_t = std::vector<size_t>;
- 
+
  struct ORCUS_SPM_DLLPUBLIC pivot_cache_record_value_t
  {
 -    using value_type = std::variant<bool, double, std::size_t, std::string_view, date_time_t>;
 +    using value_type = boost::variant<bool, double, std::size_t, std::string_view, date_time_t>;
- 
+
      enum class record_type
      {
 @@ -66,7 +67,7 @@ using pivot_cache_record_t = std::vector<pivot_cache_record_value_t>;
- 
+
  struct ORCUS_SPM_DLLPUBLIC pivot_cache_item_t
  {
 -    using value_type = std::variant<bool, double, std::string_view, date_time_t, error_value_t>;
 +    using value_type = boost::variant<bool, double, std::string_view, date_time_t, error_value_t>;
- 
+
      enum class item_type
      {
 diff --git a/include/orcus/threaded_json_parser.hpp b/include/orcus/threaded_json_parser.hpp
@@ -184,7 +184,7 @@ index 51cdaced..3bf6e591 100644
                  {
 -                    auto v = std::get<parse_error_value_t>(t.value);
 +                    auto v = boost::get<parse_error_value_t>(t.value);
-                     throw json::parse_error(std::string{v.str}, v.offset);
+                     throw parse_error(std::string{v.str}, v.offset);
                  }
                  case json::parse_token_t::unknown:
 diff --git a/include/orcus/threaded_sax_token_parser.hpp b/include/orcus/threaded_sax_token_parser.hpp
@@ -218,7 +218,7 @@ index 59ea967a..1b389be2 100644
              {
 -                auto v = std::get<parse_error_value_t>(t.value);
 +                auto v = boost::get<parse_error_value_t>(t.value);
-                 throw sax::malformed_xml_error(std::string{v.str}, v.offset);
+                 throw malformed_xml_error(std::string{v.str}, v.offset);
              }
              default:
 diff --git a/src/liborcus/css_document_tree.cpp b/src/liborcus/css_document_tree.cpp
@@ -291,22 +291,22 @@ diff --git a/src/liborcus/orcus_csv.cpp b/src/liborcus/orcus_csv.cpp
 index 5c71bcf5..637308ab 100644
 --- a/src/liborcus/orcus_csv.cpp
 +++ b/src/liborcus/orcus_csv.cpp
-@@ -63,7 +63,7 @@ public:
+@@ -61,7 +61,7 @@ public:
          // 0.
          if (m_row >= mp_sheet->get_sheet_size().rows)
          {
 -            auto csv = std::get<config::csv_config>(m_app_config.data);
 +            auto csv = boost::get<config::csv_config>(m_app_config.data);
- 
+
              if (!csv.split_to_multiple_sheets)
                  throw max_row_size_reached();
-@@ -93,7 +93,7 @@ public:
- 
-     void cell(const char* p, size_t n, bool transient)
+@@ -91,7 +91,7 @@ public:
+
+     void cell(std::string_view v, bool transient)
      {
 -        auto csv = std::get<config::csv_config>(m_app_config.data);
 +        auto csv = boost::get<config::csv_config>(m_app_config.data);
- 
+
          if (m_sheet == 0 && size_t(m_row) < csv.header_row_size)
          {
 diff --git a/src/orcus_csv_main.cpp b/src/orcus_csv_main.cpp
@@ -314,12 +314,12 @@ index 4f6d7173..446f2684 100644
 --- a/src/orcus_csv_main.cpp
 +++ b/src/orcus_csv_main.cpp
 @@ -45,7 +45,7 @@ public:
- 
+
      virtual void map_to_config(config& opt, const po::variables_map& vm) override
      {
 -        auto csv = std::get<config::csv_config>(opt.data);
 +        auto csv = boost::get<config::csv_config>(opt.data);
- 
+
          if (vm.count("row-header"))
              csv.header_row_size = vm["row-header"].as<size_t>();
 diff --git a/src/orcus_test_csv.cpp b/src/orcus_test_csv.cpp
@@ -328,13 +328,13 @@ index 310ace9d..0b9ba994 100644
 +++ b/src/orcus_test_csv.cpp
 @@ -95,8 +95,8 @@ void test_csv_import_split_sheet()
      std::cout << "checking " << path << "..." << std::endl;
- 
+
      config conf(format_t::csv);
 -    std::get<config::csv_config>(conf.data).header_row_size = 0;
 -    std::get<config::csv_config>(conf.data).split_to_multiple_sheets = true;
 +    boost::get<config::csv_config>(conf.data).header_row_size = 0;
 +    boost::get<config::csv_config>(conf.data).split_to_multiple_sheets = true;
- 
+
      // Set the row size to 11 to make sure the split occurs.
      spreadsheet::range_size_t ss{11, 4};
 @@ -126,7 +126,7 @@ void test_csv_import_split_sheet()
@@ -347,28 +347,28 @@ index 310ace9d..0b9ba994 100644
          spreadsheet::import_factory factory(doc);
          orcus_csv app(&factory);
 @@ -149,7 +149,7 @@ void test_csv_import_split_sheet()
- 
+
      // Re-import it again, but this time disable the splitting.  The data should
      // get trucated on the first sheet.
 -    std::get<config::csv_config>(conf.data).split_to_multiple_sheets = false;
 +    boost::get<config::csv_config>(conf.data).split_to_multiple_sheets = false;
- 
+
      path = dir;
      path.append("input.csv");
 diff --git a/src/orcus_test_xlsx.cpp b/src/orcus_test_xlsx.cpp
 index 807c61e4..632fb1e7 100644
 --- a/src/orcus_test_xlsx.cpp
 +++ b/src/orcus_test_xlsx.cpp
-@@ -1154,8 +1154,8 @@ void test_xlsx_pivot_group_by_numbers()
-     for (const pivot_cache_item_t& item : fld->items)
+@@ -1481,8 +1481,8 @@ void test_xlsx_pivot_group_by_numbers()
+     for (const auto& item : fld->items)
      {
-         assert(item.type == pivot_cache_item_t::item_type::numeric);
+         assert(item.type == ss::pivot_cache_item_t::item_type::numeric);
 -        assert(*fld->min_value <= std::get<double>(item.value));
 -        assert(std::get<double>(item.value) <= *fld->max_value);
 +        assert(*fld->min_value <= boost::get<double>(item.value));
 +        assert(boost::get<double>(item.value) <= *fld->max_value);
      }
- 
+
      // This field is also gruop field with 7 numeric intervals of width 2.
 diff --git a/src/parser/json_parser_thread.cpp b/src/parser/json_parser_thread.cpp
 index 36bbe6e6..65fb6255 100644
@@ -411,8 +411,8 @@ index be495894..0d21ba71 100644
                  break;
 +            }
          }
- 
+
          if (!obj)
--- 
+--
 2.25.1
 
