--- a/external/skia/fix-pch.patch.1
+++ b/external/skia/fix-pch.patch.1
@@ -1,15 +1,3 @@
-diff --git a/include/core/SkColor.h b/include/core/SkColor.h
-index a6e63def23..1c0655c3d7 100644
---- a/include/core/SkColor.h
-+++ b/include/core/SkColor.h
-@@ -420,6 +420,7 @@ using SkColor4f = SkRGBA4f<kUnpremul_SkAlphaType>;
- 
- template <> SK_API SkColor4f SkColor4f::FromColor(SkColor);
- template <> SK_API SkColor   SkColor4f::toSkColor() const;
-+template <> uint32_t SkColor4f::toBytes_RGBA() const;
- 
- namespace SkColors {
- constexpr SkColor4f kTransparent = {0, 0, 0, 0};
 diff --git a/include/private/SkColorData.h b/include/private/SkColorData.h
 index a59e7b0446..960b4c0313 100644
 --- a/include/private/SkColorData.h
@@ -79,21 +67,11 @@ index af4909aaaf..825ec35c83 100644
  #include <dwrite.h>
  #include <d2d1.h>
  
-diff --git a/third_party/skcms/skcms.cc b/third_party/skcms/skcms.cc
+diff --git a/modules/skcms/skcms.cc b/modules/skcms/skcms.cc
 index 1b643f45cf..c1981110da 100644
---- a/third_party/skcms/skcms.cc
-+++ b/third_party/skcms/skcms.cc
-@@ -130,7 +130,8 @@ static float minus_1_ulp(float x) {
- // Most transfer functions we work with are sRGBish.
- // For exotic HDR transfer functions, we encode them using a tf.g that makes no sense,
- // and repurpose the other fields to hold the parameters of the HDR functions.
--enum TFKind { Bad, sRGBish, PQish, HLGish, HLGinvish };
-+enum TFKind_skcms { Bad, sRGBish, PQish, HLGish, HLGinvish };
-+#define TFKind TFKind_skcms
- struct TF_PQish  { float A,B,C,D,E,F; };
- struct TF_HLGish { float R,G,a,b,c,K_minus_1; };
- // We didn't originally support a scale factor K for HLG, and instead just stored 0 in
-@@ -2318,7 +2319,9 @@ typedef enum {
+--- a/modules/skcms/skcms.cc
++++ b/modules/skcms/skcms.cc
+@@ -2371,7 +2372,9 @@ typedef enum {
      Op_store_hhhh,
      Op_store_fff,
      Op_store_ffff,
