Fix no-pch Windows build: missing include
> In file included from C:/lo/src/build/workdir/UnpackedTarball/skia/tools/sk_app/win/VulkanWindowContext_win.cpp:9:
> C:/lo/src/build/workdir/UnpackedTarball/skia\tools/sk_app/win/WindowContextFactory_win.h(23,1): error: unknown type name 'SK_API'
> SK_API std::unique_ptr<WindowContext> MakeVulkanForWin(HWND, const DisplayParams&);
> ...

Change-Id: I7f88cbb005310dd586e53b262ce31a71d49faedc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146121
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>

--- a/external/skia/make-api-visible.patch.1
+++ b/external/skia/make-api-visible.patch.1
@@ -57,7 +57,16 @@ diff --git a/tools/sk_app/win/WindowContextFactory_win.h b/tools/sk_app/win/Wind
 index c05a4f0acf..fc27cd2afb 100644
 --- a/tools/sk_app/win/WindowContextFactory_win.h
 +++ b/tools/sk_app/win/WindowContextFactory_win.h
-@@ -20,24 +20,24 @@ struct DisplayParams;
+@@ -13,31 +13,33 @@ struct DisplayParams;
+ 
+ #include <memory>
+ 
++#include "include/core/SkTypes.h"
++
+ namespace sk_app {
+ 
+ class WindowContext;
+ struct DisplayParams;
  
  namespace window_context_factory {
  
