Revert "Update skia to m110"
This reverts commit 29c23d7970ed3e00e798f1c9452095ad14984875 plus follow-up
e1434dbc82d619e4f0027a9ac07b3001c4f7bf56 "Fix no-pch Windows build: missing
include".  It caused my Windows build `instdir/program/soffice` to immediatley
fail with

> skia\include/core/SkRefCnt.h(62): fatal error: "assert(this->getRefCnt() > 0)"
> warn:skia:10572:7804:external/skia/source/SkMemory_malloc.cxx:32: sk_abort_no_print

on start.

Change-Id: I751f83eda28d9a5a8f9dd4b2429389906ffce983
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146132
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/external/skia/fix-warnings.patch.1
+++ b/external/skia/fix-warnings.patch.1
@@ -32,8 +32,8 @@ index f143dab013..be3cde0f4f 100644
      bool isAniso() const { return maxAniso != 0; }
  
  private:
--    constexpr SkSamplingOptions(int maxAniso) : maxAniso(maxAniso) {}
-+    constexpr SkSamplingOptions(int maxAniso_) : maxAniso(maxAniso_) {}
+-    SkSamplingOptions(int maxAniso) : maxAniso(maxAniso) {}
++    SkSamplingOptions(int maxAniso_) : maxAniso(maxAniso_) {}
  };
  
  #endif
