Rename: Extension Manager -> Extensions
simplify dialog title, should be clear what this is about.

Change-Id: I65d8ca89e32cc225a07483703cd27b0fdc630b42
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146715
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sysui/desktop/man/unopkg.1
+++ b/sysui/desktop/man/unopkg.1
@@ -44,7 +44,7 @@ reinstall all deployed extensions (only for experts)
 list information about the deployed extensions
 .TP
 \fBgui\fR
-raise Extension Manager Graphical User Interface (GUI)
+raise Extensions dialog
 
 .SH OPTIONS
 .TP
